tests/NormalTests/paczka1/small_fuzzy/28775572.err
Error in line 2: Q715CDzKj S668 1,0
Error in line 7: KjuLapZWjaA S668 74,3
Error in line 5: S668 S707 18,9
Error in line 9: S668 A506 68,4
Error in line 4: Ule92T S707 10,4
Error in line 13: Ule92T S668 64,2
